Fixing the hamburguer menu position, z-index and making the height auto.

--- a/www/web/themes/custom/hex/sass/color.scss
+++ b/www/web/themes/custom/hex/sass/color.scss
@@ -33,6 +33,10 @@ p, a, span, label, summary, h1, h2, h3, h4, h5, form {
   color: $active;
 }
 
+.fa-bars {
+  color: $top-menu-item;
+}
+
 [data-big-pipe-placeholder-id] {
   background: $background;
 
