--- a/www/web/themes/custom/hex/sass/components/_navigation.scss
+++ b/www/web/themes/custom/hex/sass/components/_navigation.scss
@@ -1,4 +1,7 @@
 .navigation {
+  z-index: 100;
+  height: auto;
+
   &.menu--main {
     margin: 0;
 
